Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125089

crash: notepad example from qtbase on ios

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS, macOS
    • 1ffa41d04 (dev)

    Description

      when i try to run the example on any apple platform i got this:

      ASSERT: "_focusView && _desktopView && _desktopView.superview" in file  qtbase/src/plugins/platforms/ios/qiostextinputoverlay.mm, line 438

      I have done some tests and i found _focusView == nullptr which is UIView on iOS and NSView on macOS

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dorisverria Doris Verria
            amr_essam Amr Elsayed
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes